--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^1.3.4"
   }
 }
