--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "xltabs": "^1.0.2"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
